# showroom-tool

./: .gitignore  README.md  pirate-prompt.py  pyproject.toml  requirements.txt  showroom-tool.py
.cursor/rules/: rules-ai-and-llms.mdc  rules-langgraph.mdc  rules-pydantic.mdc  rules-python.mdc
config/: basemodels.py  prompts.py
docs/: prompting-guide.md
sample-code/: basemodels.py  graph_factory.py  shared_utilities.py
specs/: application-overview.md  requirements.md  structure.md  tech.md
src/config/: __init__.py  basemodels.py
src/showroom_tool/: __init__.py  __main__.py  cli.py  graph_factory.py  outputs.py  prompt_builder.py  prompts.py  shared_utilities.py  showroom.py
src/showroom_tool/config/: defaults.py
templates/: CatalogDescription.adoc.j2  ShowroomReview.adoc.j2  ShowroomSummary.adoc.j2
tests/: test_graph_factory.py  test_outputs.py  test_showroom_fetch_local_dir.py
utils/: agv-iterator.sh
workspace/: summary_showroom_20250730_130833.json  summary_showroom_20250730_131029.json  summary_showroom_20250730_132118.json  summary_showroom_20250730_133931.json  summary_showroom_20250730_134005.json  summary_showroom_20250730_145225.json  summary_showroom_20250730_150205.json  summary_showroom_20250730_150455.json
